// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match Filter component in desktop format snapshot 1`] = `
<div>
  <div
    class="filter-container filter-container--desk"
  >
    <div
      class="filter-container__container"
    >
      <p
        class="filter-container__label"
      >
        Filter
      </p>
    </div>
    <button
      class="filter-container__option highABV"
    >
      High ABV (&gt; 6.0%)
      <img
        alt="add filter"
        class="highABV"
        src="add.svg"
      />
    </button>
    <button
      class="filter-container__option classic"
    >
      Classic Range
      <img
        alt="add filter"
        class="classic"
        src="add.svg"
      />
    </button>
    <button
      class="filter-container__option ph"
    >
      Acidic (pH &lt; 4)
      <img
        alt="add filter"
        class="ph"
        src="add.svg"
      />
    </button>
  </div>
</div>
`;

exports[`should match Filter component in mobile format snapshot 1`] = `
<div>
  <div
    class="filter-container filter-container--mob"
  >
    <div
      class="filter-container__container"
    >
      <p
        class="filter-container__label"
      >
        Filter
      </p>
      <img
        alt="toggle filter menu"
        class="filter-container__arrow"
        src="down-arrow.svg"
      />
    </div>
  </div>
</div>
`;
